src/test/deca/context/invalid/sansObjet/BadWhile.deca
{
    while (true && true  || "Hello 2020"){
        print("Je suis dans le While");
    }
}
